# oefo

./: .env.example  .gitignore  0001-OEFO-remediation-production-ready-packaging-tests-CI.patch  AUDIT.md  CHROME_SCRAPER_RESEARCH.md  CONFIG_MODULE_SUMMARY.md  DATA_MODEL_INDEX.md  DELIVERABLES.txt  FINAL_VALIDATION.md  LICENSE  MANIFEST.in  MODEL_VALIDATION_CHECKLIST.md  OEFO_Agent_Autonomous_Operations.md  OEFO_User_Guide.docx  QUICK_START.md  README.md  SCRAPERS_REFERENCE.md  SCRAPER_FIX_PROMPT.md  SCRAPER_LEARNINGS.md  __main__.py  cli.py  fix_oefo_repo.py  models.py  oefo-fixes.patch  pyproject.toml  remediation_status.json  requirements.txt  setup.py
.claude/: launch.json
.github/workflows/: ci.yml
.oefo_remediation_backup/20260311_120823/.github/workflows/: ci.yml
.oefo_remediation_backup/20260311_120823/docs/: ARCHITECTURE.md  INSTALL.md  OPENCLAW.md
.oefo_remediation_backup/20260311_120823/tests/: __init__.py  test_cli.py
config/: __init__.py  settings.py  taxonomy.py
dashboard/: server.py
docs/: ARCHITECTURE.md  CODE_SAMPLES.md  CONFIG_MODULE_SUMMARY.md  DATA_MODEL_INDEX.md  DATA_MODEL_SUMMARY.md  DELIVERABLES.txt  INSTALL.md  MODEL_VALIDATION_CHECKLIST.md  OPENCLAW.md  QUICK_START.md  SCRAPERS_REFERENCE.md  SCRAPERS_SUMMARY.txt
docs/skills/: export_database.md  full_pipeline.md  run_qc.md  scrape_dfi.md
extraction/: README.md  __init__.py  ocr.py  pipeline.py
extraction/prompts/: __init__.py  bond.py
legacy_docs/: OEFO_Installation_Procedure.docx
outputs/: __init__.py  csv_export.py
qc/: ARCHITECTURE.md  MODULE_CONTENTS.txt  QUICK_START.md  README.md  __init__.py  llm_review.py  rules.py
scrapers/: ARCHITECTURE.md  __init__.py  base.py
scrapers/regulatory/: __init__.py  aer.py  aneel.py  ferc.py  ofgem.py
scripts/: oefo_claw_run.sh  oefo_env_check.py  oefo_smoke_test.py
skills/: extract_documents.md  full_pipeline.md  scrape_regulatory.md
src/oefo/: __init__.py  __main__.py  agent.py  cli.py  exceptions.py  llm_client.py  models.py
src/oefo/config/: README.md  __init__.py  settings.py  sources.py  taxonomy.py  thresholds.py
src/oefo/dashboard/: __init__.py  index.html  pipeline_snapshot.json  server.py  tracker.py
src/oefo/data/: __init__.py  damodaran_benchmarks.csv  damodaran_country_risk.csv  storage.py
src/oefo/extraction/: ARCHITECTURE.md  DELIVERABLES.md  README.md  text.py  vision.py
src/oefo/extraction/prompts/: bond.py  corporate.py  dfi.py  regulatory.py
src/oefo/metrics/: __init__.py  health.py  ledger.py  source_history.py
src/oefo/outputs/: excel.py  visualisations.py
src/oefo/qc/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  MODULE_CONTENTS.txt  QUICK_START.md  README.md  agent.py  benchmarks.py  rules.py
src/oefo/scrapers/: ARCHITECTURE.md  base.py  ebrd.py  gcf.py  ifc.py  probes.py  sec_edgar.py  strategies.py
src/oefo/scrapers/regulatory/: aer.py  aneel.py  base.py  ferc.py  ofgem.py
src/oefo/utils/: __init__.py  fx.py  wacc.py
tests/: conftest.py  test_agent.py  test_cli.py  test_config.py  test_dashboard.py  test_env_check.py  test_fx.py  test_imports.py  test_llm_client.py  test_models.py  test_packaging.py  test_qc.py  test_scrapers.py  test_self_improving.py  test_taxonomy.py
