[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oefo"
version = "0.1.0"
description = "Open Energy Finance Observatory - Energy finance data toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ET Finance"},
]
keywords = ["energy", "finance", "wacc", "renewable", "solar", "wind", "hydro"]
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyarrow>=12.0",
    "pdfplumber>=0.9",
    "pymupdf>=1.22",
    "pdf2image>=1.16",
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "opencv-python-headless>=4.8",
    "anthropic>=0.25",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
    "python-dateutil>=2.8",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: News/Diary",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/lcarato/oefo"
Repository = "https://github.com/lcarato/oefo"

[project.scripts]
oefo = "oefo.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
openai = ["openai>=1.0"]
google = ["google-generativeai>=0.5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oefo = [
    "dashboard/*.html",
    "dashboard/*.json",
    "config/*.json",
    "config/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 88
lint.select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
lint.ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["oefo"]
