[build-system]
        requires = ["setuptools>=69", "wheel"]
        build-backend = "setuptools.build_meta"

        [project]
        name = "oefo"
        version = "0.1.0"
        description = "Open Energy Finance Observatory - Energy finance data toolkit"
        readme = "README.md"
        requires-python = ">=3.10"
        authors = [{ name = "ET Finance" }]
        license = "MIT"
        keywords = ["energy", "finance", "wacc", "debt", "equity", "scraping", "extraction"]
        classifiers = [
          "Development Status :: 4 - Beta",
          "Intended Audience :: Developers",
          "Intended Audience :: Science/Research",
          "Programming Language :: Python :: 3",
          "Programming Language :: Python :: 3.10",
          "Programming Language :: Python :: 3.11",
          "Programming Language :: Python :: 3.12",
          "Topic :: Scientific/Engineering :: Information Analysis",
        ]
        dependencies = [
  "pandas>=2.0",
  "pydantic>=2.0",
  "pyarrow>=12.0",
  "pdfplumber>=0.9",
  "pymupdf>=1.22",
  "pdf2image>=1.16",
  "pytesseract>=0.3",
  "Pillow>=10.0",
  "opencv-python-headless>=4.8",
  "anthropic>=0.25",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=4.9",
  "openpyxl>=3.1",
  "matplotlib>=3.7",
  "python-dateutil>=2.8",
]

        [project.optional-dependencies]
        dev = [
  "build>=1.2",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.6",
  "twine>=5.1",
]
        openai = [
  "openai>=1.0",
]
        google = [
  "google-generativeai>=0.5",
]

        [project.scripts]
        oefo = "oefo.cli:main"

        [tool.setuptools]
        package-dir = {"" = "src"}
        include-package-data = true

        [tool.setuptools.packages.find]
        where = ["src"]
        include = ["oefo*"]

        [tool.setuptools.package-data]
        oefo = ["dashboard/*.html", "dashboard/*.json"]

        [tool.ruff]
        line-length = 100
        target-version = "py310"

        [tool.pytest.ini_options]
        addopts = "-q"
        testpaths = ["tests"]
